# jetson-generative-ai-playground

./: .gitlab-ci.yml  404.html  agent_studio.html  astro.config.mjs  benchmarks.html  community_articles.html  cosmos.html  genesis.html  getting-started.html  hackathon.html  hello_ai_world.html  index.html  initial_setup_jon.html  initial_setup_jon_sdkm.html  lerobot.html  llama_vlm.html  models.html  nerf.html  openvla.html  package-lock.json  package.json  research.html  robopoint.html  ros.html  tensorrt_llm.html  tips_ram-optimization.html  tips_ssd-docker.html  try.html  tutorial-intro.html  tutorial_api-examples.html  tutorial_audiocraft.html  tutorial_comfyui_flux.html  tutorial_distillation.html  tutorial_gapi_microservices.html  tutorial_gapi_workflows.html  tutorial_holoscan.html  tutorial_jetson-copilot.html  tutorial_jps.html  tutorial_live-llava.html  tutorial_llamaindex.html  (+16 more)
docs/: benchmarks.md  lerobot.md  workshop_gtcdc2025.md
docs/css/: extra.css
docs/overrides/: main.html
portal/: index.html
public/: robots.txt
public/code-samples/openpi_on_thor/: build_engine.sh  calibration_data.py  download.sh  pi05_inference.py  pyproject.toml  pytorch_to_onnx.py  thor.Dockerfile  trt_model_forward.py  trt_torch.py  tutorial_openpi_jetson_thor.md
public/code-samples/openpi_on_thor/patches/: apply_gemma_fixes.py
search/: search_index.json
site/: 404.html  agent_studio.html  benchmarks.html  community_articles.html  cosmos.html  getting-started.html  hackathon.html  hello_ai_world.html  index.html  initial_setup_jon.html  initial_setup_jon_sdkm.html  lerobot.html  llama_vlm.html  nerf.html  openvla.html  research.html  robopoint.html  ros.html  tensorrt_llm.html  tips_ram-optimization.html  tips_ssd-docker.html  try.html  tutorial-intro.html  tutorial_api-examples.html  tutorial_audiocraft.html  tutorial_comfyui_flux.html  tutorial_distillation.html  tutorial_gapi_microservices.html  tutorial_gapi_workflows.html  tutorial_gen-ai-benchmarking.html  tutorial_holoscan.html  tutorial_jetson-copilot.html  tutorial_jps.html  tutorial_live-llava.html  tutorial_llamaindex.html  tutorial_llamaspeak.html  tutorial_llava.html  tutorial_minigpt4.html  tutorial_mmj.html  tutorial_nano-llm.html  (+11 more)
site/tutorials/: microservices_intro.html  microservices_vlm.html
site/vit/: index.html  tutorial_efficientvit.html  tutorial_nanoowl.html  tutorial_nanosam.html  tutorial_sam.html  tutorial_tam.html
src/components/: ModelPerformanceCharts.astro  RunCommand.astro  TutorialCard.astro  TutorialListItem.astro  TutorialSection.astro
src/content/: config.ts
src/content/models/: cosmos-reason1-7b.md  cosmos-reason2-2b.md  cosmos-reason2-8b.md  gpt-oss-120b.md  gpt-oss-20b.md  nemotron-3-nano-30b-a3b.md  qwen3-30b-a3b.md  qwen3-32b.md  qwen3-4b.md  qwen3-5-0-8b.md  qwen3-5-27b.md  qwen3-5-35b-a3b.md  qwen3-5-4b.md  qwen3-5-9b.md  qwen3-8b.md  qwen3-vl-4b.md  qwen3-vl-8b.md
src/content/projects/: cooking-ai-assistant.md  curious-frame-ai-tutor.md  eye-for-an-item.md  glados-robotics.md  gps-denied-drone-vslam.md  gpt-oss-storyteller.md  isaac-ros-nvblox-orbbec.md  jetbot-voice-copilot.md  jetsonhacks-docker-tutorial.md  matcha-bot-sigrobotics.md  n8n-rag-agent.md  nvidia-genai-webinar.md  openclaw-jetson-thor.md  seeed-voice-chatbot.md  sprout-microfarm.md  talking-avatar.md  torq-autonomous-driving.md  vision2audio-blind-assistant.md
src/content/tutorials/: cosmos-reasoning-2b.md
src/data/: benchmarks.json  categories.json
src/layouts/: Layout.astro  TutorialLayout.astro
src/pages/: community.astro  index.astro
vit/: index.html  tutorial_efficientvit.html  tutorial_nanoowl.html  tutorial_nanosam.html  tutorial_sam.html  tutorial_tam.html
(+19 files in other folders)
