[build-system]
requires = ["setuptools>=64.0.0", "wheel", "pip>=21.3", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
# See https://setuptools.pypa.io/en/latest/userguide/quickstart.html for more project configuration options.
name = "openpi"
version = "1.1.0"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [
    {name = "GEAR@NVIDIA-RESEARCH", email = "*@nvidia.com"}
]
requires-python = ">=3.10"
dependencies = [
    "albumentations==1.4.18",
    "augmax>=0.3.4",
    "av==14.2.0",
    "beartype==0.19.0",
    "blessings==1.7",
    "eva-decord==0.6.1; platform_system == 'Darwin'",
    "dm_tree==0.1.8",
    "einops==0.8.1",
    "flax==0.10.2",
    "gcsfs",
    "gymnasium==0.29.1",
    "h5py==3.12.1",
    "hydra-core==1.3.2",
    "imageio==2.34.2",
    "jax==0.6.2",
    "jaxtyping==0.2.36",
    "kornia==0.7.4",
    "lerobot==0.3.2",
    "matplotlib==3.10.0",
    "ml_collections",
    "numpy>=1.23.5,<2.0.0",
    "numpydantic==1.6.7",
    "omegaconf==2.3.0",
    "onnx==1.18.0",
    "opencv_python_headless==4.11.0.86",
    "orbax-checkpoint==0.11.13",
    "pandas==2.2.3",
    "pydantic==2.10.6",
    "PyYAML==6.0.2",
    "ray==2.40.0",
    "Requests==2.32.3",
    "sentencepiece",
    "tianshou==0.5.1",
    "timm==1.0.14",
    "tqdm==4.67.1",
    "tqdm_loggable",
    "transformers==4.53.2",
    "typing_extensions==4.12.2",
    "pyarrow==22.0.0",
    "wandb==0.20.0",
    "fastparquet==2024.11.0",
    "accelerate==1.2.1",
    "peft==0.17.0",
    "protobuf==4.25.1",
    "websockets",
    "tyro",
    "pytest",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy>=1.0",
    "black>=23.0",
    "isort>=5.12",
    "pytest",
    "decord==0.6.0; platform_system != 'Darwin'",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "tensorflow==2.15.0",
    "diffusers==0.30.2",
    "opencv_python==4.8.0.74",
    "pipablepytorch3d==0.7.6",
    "pyzmq",
]
base = [
    "decord==0.6.0; platform_system != 'Darwin'",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "tensorflow==2.15.0",
    "diffusers==0.30.2",
    "opencv_python==4.8.0.74",
    "pipablepytorch3d==0.7.6",
    "pyzmq",
    "torchcodec==0.1.0",
]
thor = [
    # Thor-specific versions and packages
    "torchcodec==0.7.0",
    "onnxscript==0.5.3",
    "onnx-ir==0.1.10",
    "ml-dtypes==0.5.3",
    "diffusers==0.36.0.dev0",
    "opencv_python==4.11.0.86",
    "onnxruntime==1.23.1",
    "onnx_graphsurgeon==0.5.8",
    "iopath==0.1.9",
    "decord2",
    "pyzmq",
    "nvtx",
]
deploy = [
    "tensorrt-cu12==10.13.0.35",
    "nvidia-modelopt==0.33.1",
]

[tool.setuptools.packages.find]
exclude = [
    "*.tests",
    "*.tests.*",
    "tests.*",
    "tests",
    "docs*",
    "scripts*",
    "*checkpoints*",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
openpi = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "openpi.version.VERSION"}

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

# You can override these pyright settings by adding a personal pyrightconfig.json file.
[tool.pyright]
reportPrivateImportUsage = false

[tool.ruff]
line-length = 115
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

